add failing consultation fee test